--- a/helm/.goreleaser_ee_dryrun.yml
+++ b/helm/.goreleaser_ee_dryrun.yml
@@ -10,7 +10,7 @@ release:
   mode: keep-existing
   extra_files:
     - glob: build/determined-latest.tgz
-      name_template: "hpe-mlde-helm-chart_{{ .VERSION }}.tgz"
+      name_template: "hpe-mlde-helm-chart_{{ .Version }}.tgz"
 
   # be sure to keep this in sync between agent/master/helm
   # the "include" functionality is only in the pro version
