Label release candidate as `draft` instead of `pre-release`. RC is not intended for user to use. Repo viewer will not be able to see it when it is labeled as `draft`. Taking one step back , why do we publish rc with helm chart as an asset? There is a Github action called `publish helm chart` publishes it to the helm repo at helm.determined.ai. So ArgoCD can find it and upgrade the release party cluster. For more context, check out: https://github.com/determined-ai/determined/pull/10141

--- a/helm/.goreleaser_rc.yml
+++ b/helm/.goreleaser_rc.yml
@@ -1,3 +1,5 @@
+# Beside draft: true, the rest of the file remains the same as .goreleaser.yml.
+# Can be avoided by upgrading goreleaser to 1.26.0. Its CLI supports --draft.
 project_name: determined-helm
 
 build:
@@ -11,6 +13,7 @@ release:
   extra_files:
     - glob: build/determined-latest.tgz
       name_template: "determined-helm-chart_{{ .Version }}.tgz"
+  draft: true
 
   # be sure to keep this in sync between agent/master/helm
   # the "include" functionality is only in the pro version
