--- a/helm/.goreleaser.yml
+++ b/helm/.goreleaser.yml
@@ -10,8 +10,7 @@ release:
   mode: keep-existing
   extra_files:
     - glob: build/determined-latest.tgz
-      name_template: "determined-helm-chart_{{ .VERSION }}.tgz"
-  prerelease: auto
+      name_template: "determined-helm-chart_{{ .Version }}.tgz"
 
   # be sure to keep this in sync between agent/master/helm
   # the "include" functionality is only in the pro version
