ci: allow release candidate triggers helm chart upload
We had labeled release candidates (RCs) as pre-releases, which
cluttered the repo's release page. It's not easy to find the final
version. To address this, RCs are labeled as drafts. This commit
allows the Github Action `publish-helm` trigger by RC and upload
RC helm chart to the helm repo.

--- a/.github/workflows/publish-helm.yml
+++ b/.github/workflows/publish-helm.yml
@@ -11,7 +11,7 @@ on:  # yamllint disable-line rule:truthy
         type: string
   release:
     types:
-      - published
+      - created
 
 jobs:
   publish:
